--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Chemical-analysis-calculator",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://David-Vanuxin.github.io/Chemical-analysis-calculator",
+  "homepage": "/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
